--- a/Pages/HRAindex.html
+++ b/Pages/HRAindex.html
@@ -13,6 +13,7 @@
                <a href="../AHL CALCI/index.html"> <!-- Replace 'index.html' with your homepage URL -->
                 <img src="../assets/img/Ashiana Corporate Logo.pdf.png" alt="LOGO">
             </a>
+            </div>
         </div>
     </header>
     <h1 style="text-align: center;">HRA Calculator</h1>
@@ -20,138 +21,105 @@
         <div class="main-container">
             <!-- Left Section -->
             <section class="left-section">
-    <div class="calculator-section">
-        <form id="hraForm">
-            <div class="input-field">
-                <label for="basicSalary">Basic Salary (₹):</label>
-                <input type="number" id="basicSalary" placeholder="Enter basic salary" min="1000" max="1000000" required>
-                <input type="range" id="basicSalaryRange" min="1000" max="1000000" value="1000">
-            </div>
-            <div class="input-field">
-                <label for="HRA">HRA Received (₹):</label>
-                <input type="number" id="HRA" placeholder="Enter HRA received" min="1000" max="1000000" required>
-                <input type="range" id="HRARange" min="1000" max="1000000" value="1000">
-            </div>
-            <div class="input-field">
-                <label for="DA">Dearness Allowance (₹):</label>
-                <input type="number" id="DA" value="0" min="0" max="50000">
-                <input type="range" id="DARange" min="0" max="50000" value="0">
-            </div>
-            <div class="input-field">
-                <label for="rentPaid">Rent Paid (₹):</label>
-                <input type="number" id="rentPaid" placeholder="Enter rent paid" min="1000" max="1000000" required>
-                <input type="range" id="rentPaidRange" min="1000" max="1000000" value="1000">
-            </div>
-            <div style="display: flex; align-items: center; justify-content: space-between; margin: 20px 0; font-family: Arial, sans-serif;">
-                <span style="font-size: 16px;">Are you working in a metro city?</span>
-                <div style="display: flex; align-items: center; gap: 10px;">
-                    <input type="radio" id="yes" name="metro" value="yes" style="margin-right: 20px;">
-                    <label for="yes" style="margin: 10px;; font-size: 16px;">Yes</label>
-                    <input type="radio" id="no" name="metro" value="no" style="margin-right: 20px;">
-                    <label for="no" style="margin: 10px; font-size: 16px;">No</label>
+                <div class="calculator-section">
+                    <form id="hraForm">
+                        <div class="input-field">
+                            <label for="basicSalary">Basic Salary (₹):</label>
+                            <input type="number" id="basicSalary" placeholder="Enter basic salary" min="1000" max="10000000" value="5400000" required>
+                            <input type="range" id="basicSalaryRange" min="1000" max="10000000" value="5400000">
+                        </div>
+                        <div class="input-field">
+                            <label for="DA">Dearness Allowance (₹):</label>
+                            <input type="number" id="DA" value="0" min="0" max="50000">
+                            <input type="range" id="DARange" min="0" max="50000" value="0">
+                        </div>
+                        <div class="input-field">
+                            <label for="HRA">HRA Received (₹):</label>
+                            <input type="number" id="HRA" placeholder="Enter HRA received" min="0" max="1000000" value="100000" required>
+                            <input type="range" id="HRARange" min="0" max="1000000" value="100000">
+                        </div>
+                        <div class="input-field">
+                            <label for="rentPaid">Rent Paid (₹):</label>
+                            <input type="number" id="rentPaid" placeholder="Enter rent paid" min="1000" max="1000000" value="300000" required>
+                            <input type="range" id="rentPaidRange" min="1000" max="1000000" value="300000">
+                        </div>
+                        <div style="display: flex; align-items: center; justify-content: space-between; margin: 20px 0; font-family: Arial, sans-serif;">
+                            <span style="font-size: 16px;">Are you working in a metro city?</span>
+                            <div style="display: flex; align-items: center; gap: 10px;">
+                                <input type="radio" id="yes" name="metro" value="yes" style="margin-right: 20px;" checked>
+                                <label for="yes" style="margin: 10px; font-size: 16px;">Yes</label>
+                                <input type="radio" id="no" name="metro" value="no" style="margin-right: 20px;">
+                                <label for="no" style="margin: 10px; font-size: 16px;">No</label>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-            </div>
-        </form>
-    </div>
                 <div class="result-section" style="margin-top: 20px;">
                     <h2 style="color: red;">Results</h2>
-                            <div class="calculated-result" style="margin-bottom: 5px;">
-                                <p id="result">Exempted HRA: ₹0.00</p>
-                            </div>
-                            <div class="calculated-result" style="margin-bottom: 5px;">
-                                <p id="resultTAXABLE">Taxable HRA: ₹0.00</p>
-                            </div>
+                    <div class="calculated-result" style="margin-bottom: 5px;">
+                        <p id="result">Exempted HRA: ₹0.00</p>
+                    </div>
+                    <div class="calculated-result" style="margin-bottom: 5px;">
+                        <p id="resultTAXABLE">Taxable HRA: ₹0.00</p>
+                    </div>
                 </div>
                 
 
                 <section class="description-section">
-  <h3>Description</h3>
-  <p>House rent allowance (HRA) is one of the important components of your salary. All employers have to provide HRA as compensation for house rental expenses. However, most of us are not aware of the fact that we can also save tax on it. The HRA amount is decided based on factors like the employee’s salary structure, actual salary, and the city in which he/she is residing. If you are a salaried employee living in a rented place, then you can calculate your tax liability using our HRA calculator.</p>
+                    <h3>Description</h3>
+                    <p>
+                        House Rent Allowance (HRA) is a significant component of many salary packages. It's designed to compensate employees for housing expenses. While HRA can be a valuable benefit, it's important to understand how to maximize its tax benefits. 
+                    </p>
+                    <p>
+                        An HRA calculator is a useful tool to determine the tax-exempt portion of your HRA. By accurately calculating your HRA exemption, you can significantly reduce your taxable income.
+                    </p>
 
-  <h3>What is an HRA Calculator?</h3>
-  <p>In most Indian cities, the cost of living has risen considerably over the last decade or so. This is partly due to an increase in disposable income besides inflation. To ensure the welfare of their employees, many organizations provide a House Rent Allowance or HRA to the ones living in a rented home. This HRA calculator will help you determine the amount you receive as an allowance.</p>
-  <p>After the recommendation of the 7th Pay Commission, the HRA slabs across India have been changed to a great extent. Cities have now been categorized into 3 distinct slabs. Slab X has the most urban cities where you clearly need an HRA exemption calculator. Slab Y covers marginally low-cost cities.</p>
+                    <h3>How an HRA Calculator Works</h3>
+                    <p>
+                        To calculate HRA exemption, an HRA calculator considers the following factors:
+                    </p>
+                    <ul>
+                        <li><strong>Basic Salary:</strong> The fundamental salary component.</li>
+                        <li><strong>Actual Rent Paid:</strong> The actual rent you pay for your rented accommodation.</li>
+                        <li><strong>HRA Received:</strong> The HRA component of your salary.</li>
+                        <li><strong>City Type:</strong> Whether you reside in a metro city (like Delhi, Mumbai, Chennai, Kolkata) or a non-metro city.</li>
+                    </ul>
 
-  <h3>How can an HRA Calculator Help You?</h3>
-  <p>Using an HRA calculator online is of great benefit to those who receive a housing rental allowance from their employer.</p>
-  <ul>
-    <li>You have to be salaried and the HRA must be a part of the salary. You cannot use this calculator if you are a self-employed individual.</li>
-    <li>You must reside in rented premises.</li>
-    <li>The HRA has to exceed 10 percent of your salary.</li>
-  </ul>
-  <p>You can use the HRA calculator that we provide to evaluate how much tax you have to pay on your HRA. Here are several other advantages:</p>
-  <ul>
-    <li>Depending on the city you live in, you can claim HRA based on the calculated amounts. Slab X cities are more expensive to reside in while the costs go down with Slab Y and Z.</li>
-    <li>The house rent allowance exemption calculator will help determine how much tax you need to pay in a financial year.</li>
-    <li>HRA slabs also depend on the city you stay in. For example, if you stay in Calcutta, Ahmedabad, Mumbai, New Delhi, or Chennai, the HRA allowance may go up to 27%. The figure may go down to 18% and 9% for the tier-2 and tier-3 cities.</li>
-    <li>Depending on the quantum of your salary allocated as HRA, you can easily plan for the future using our HRA calculator.</li>
-  </ul>
+                    <p>
+                        The HRA exemption is calculated based on the minimum of the following three amounts:
+                    </p>
+                    <ul>
+                        <li><strong>Actual Rent Paid - 10% of Basic Salary</strong></li>
+                        <li><strong>HRA Received</strong></li>
+                        <li><strong>50% of Basic Salary for Metro Cities, 40% for Non-Metro Cities</strong></li>
+                    </ul>
 
-  <h3>How to Calculate HRA in India?</h3>
-  <p>Groww uses a standard formula to determine the total House Rent Allowance payable. When it comes to HRA calculation, salary refers to the basic sum plus the Dearness Allowance, and other variable commissions.</p>
-  <p>Our product also works as an excellent HRA tax benefit calculator. The actual exemption limit will be the lowest of the 3 main heads below:</p>
-  <ul>
-    <li>The total (actual) rent paid minus 10% basic salary for each individual.</li>
-    <li>The total (gross) HRA that the employer provides to the employee.</li>
-    <li>Depending on how expensive the residential conditions are, 40 to 50% of the basic salary.</li>
-  </ul>
-  <p>We can use a fictional example of Person A to identify the HRA payable. If we consider that he lives in Delhi at accommodated premises for which he has to spend Rs 12,000 every month, the following is his pay structure breakdown based on our HRA calculator:</p>
-  <table>
-    <thead>
-      <tr>
-        <th>Salary component</th>
-        <th>Total amount (each month)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Basic salary</td>
-        <td>Rs 23,000</td>
-      </tr>
-      <tr>
-        <td>HRA</td>
-        <td>Rs 15,000</td>
-      </tr>
-      <tr>
-        <td>Conveyance allowance</td>
-        <td>Rs 3,000</td>
-      </tr>
-      <tr>
-        <td>Medical allowance</td>
-        <td>Rs 1,250</td>
-      </tr>
-      <tr>
-        <td>Special allowance under other heads</td>
-        <td>Rs 2,300</td>
-      </tr>
-    </tbody>
-  </table>
+                    <h3>How to Use an HRA Calculator</h3>
+                    <p>
+                        To use an HRA calculator, you typically need to provide the following information:
+                    </p>
+                    <ul>
+                        <li>Your basic salary</li>
+                        <li>The HRA component of your salary</li>
+                        <li>The actual rent paid</li>
+                        <li>The city type (metro or non-metro)</li>
+                    </ul>
 
-  <p>Adding the components, we identify that Individual A has a monthly salary of Rs 44,500.</p>
-  <p>Based on the three heads mentioned above, using our HRA allowance calculator, the figures that are churned out are:</p>
-  <ul>
-    <li>Actual rent paid minus 10% basic or Rs 9,700</li>
-    <li>HRA the employer offers is Rs 15,000</li>
-    <li>50% of the basic salary is Rs 11,500</li>
-  </ul>
-  <p>Since the least of these 3 sums is calculated as HRA, Individual A has to pay Rs 9,700 as HRA. It will be exempted from his taxable income.</p>
+                    <p>
+                        The calculator will then determine the maximum tax-exempt HRA amount based on the above factors.
+                    </p>
 
-  <h3>How to Use the HRA Calculator?</h3>
-  <p>It is easy to use our HRA calculator when you know the steps:</p>
-  <ol>
-    <li>Step 1: Enter your basic salary and HRA you get as per your salary slip.</li>
-    <li>Step 2: Enter the actual rent paid and specify whether you live in a metro city or not from the drop-down.</li>
-  </ol>
-  <p>The HRA calculation for income tax makes it easy for the employees to save tax.</p>
-
-  <h3>Benefits of using an HRA calculator</h3>
-  <p>The primary advantages that using a reliable HRA calculator in India are:</p>
-  <ul>
-    <li>The calculator never makes errors. You can use it as many times as you wish.</li>
-    <li>You can claim tax exemptions based on the calculations.</li>
-    <li>Finally, the calculator takes care of all the variables which are present as part of the HRA calculation.</li>
-  </ul>
-</section>
+                    <h3>Benefits of Using an HRA Calculator</h3>
+                    <p>
+                        An HRA calculator offers several advantages:
+                    </p>
+                    <ul>
+                        <li><strong>Accurate Calculations:**</strong> Ensures precise calculations and avoids errors.</li>
+                        <li><strong>Time-Saving:**</strong> Quickly calculates your HRA exemption without manual computations.</li>
+                        <li><strong>Tax Planning:**</strong> Helps you understand your tax liability and plan accordingly.</li>
+                        <li><strong>Easy to Use:**</strong> User-friendly interface simplifies the process.</li>
+                    </ul>
+                </section>
 
             </section>
 
